@@ -90,7 +90,7 @@ segment with endpoints \ccc{p} and \ccc{q}.
 \ccOperations
 
 The following function gives access to the predicate object:
-\ccThree{coplanar_side_of_bounded_circle_3xxx}{gt.compare_x(Point p0, Point p1)x}{}
+\ccThree{coplanar_side_of_bounded_circle_3xxx}{gt.xxxxxxxxx(Point p0, Point p1)x}{}
 \ccCreationVariable{traits}  %% choose variable name
 
 \ccMethod{Power_test_3 power_test_3_object();}{}
